todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: jvilo/todo-app:2.22
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-volume
              mountPath: /shared
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: shared-pvc
